# handshake-reports-fix

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  requirements.in  requirements.txt
handshake-reports-fix/: main.py  with_internet.py
