[project]
name = "handshake-reports-fix"
version = "0.0.0"

authors = [
    {name = "Moshe Rubin", email = "mosherubin137@gmail.com"}
]

license = { file = "LICENSE" }

[tool.mypy]
# When in doubt, borrowed from pandas
# https://github.com/pandas-dev/pandas/blob/417d1c94fe3810f695e94360a/pyproject.toml#L66
# Import discovery
ignore_missing_imports = true
# Untyped definitions and calls
check_untyped_defs = true
# disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
disallow_any_generics = true
# None and Optional handling
no_implicit_optional = true
# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
# Miscellaneous strictness flags
strict_equality = true
# Configuring error messages
pretty = true
show_error_codes = true

[tool.ruff]
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "COM812", # Conflicts with `ruff format` and raises a warning.
    "ERA",    # Allow commented-out code.
    "FBT",    # Allow Boolean arguments.
    "INP",    # Avoid error: "File _____ is part of an implicit namespace package. Add
              # an `__init__.py`."
    "ISC001", # Conflicts with `ruff format` and raises a warning.
    "PD010",  # This rule is just outright wrong.
    "PTH207", # Since `Path.glob` != `glob.glob` (the latter can take absolute paths).
    "T20",    # Allow `print` statements.
    "UP040",  # until `mypy` supports the `type` keyword.
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
